# Xregex

./: .gitignore  CMakeLists.txt  README.md
doc/: design.md
include/: automaton.h  automaton2.h  stack.h  vector.h  xregex.h
src/: CMakeLists.txt  automata.c  automaton.c  automaton2.c  graph.c  intvector.c  lexical.c  linkList.c  stack.c  vector.c  xregex.c
test/: AllTests.c  CMakeLists.txt  IntVectorTest.c  allTest.h  stackTest.c  test.c  utfTest.c  xregex.c
